added border to blackchain grid

--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 @font-face {
   font-family: "Roobert";
-  src: url("./roobert.ttf") format("truetype");
+  src: url("../public/roobert.ttf") format("truetype");
 }
 * {
   font-family: "Roobert";
